# AgentParty

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FIXES_APPLIED.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  docker-compose.yaml  mcp_stdio.py  pyproject.toml  setup_ollama.ps1  test-agent.json  windsurf-mcp-config.json
agents/architect/: anti-patterns.md  index.yaml  patterns.md  principles.md  system-prompt.md
agents/coding-standards-auditor/: code-review-guide.md  index.yaml  linting-rules.md  standards-checklist.md  system-prompt.md
agents/engineering-manager/: index.yaml  review-criteria.md  system-prompt.md  team-standards.md
agents/policy-gate/: compliance-rules.md  index.yaml  security-checklist.md  system-prompt.md
agents/product-manager/: index.yaml  prioritization-guide.md  system-prompt.md  validation-criteria.md
agents/qa-engineer/: index.yaml  system-prompt.md  test-cases.md  testing-strategy.md
agents/requirements-engineer/: documentation-standards.md  index.yaml  system-prompt.md  validation-criteria.md
agents/sdlc-orchestrator/: index.yaml  system-prompt.md  workflow-management.md
agents/spec-author/: api-design-guide.md  index.yaml  spec-template.md  system-prompt.md
jobs/Calculator/: api-contracts.md  index.yaml  overview.md  requirements.md  security-requirements.md  (+1 more)
scripts/: index_codebase.py  test_workflow.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_agents.py  test_jobs.py  test_llm.py  test_session.py  test_vectordb.py  test_workflows.py
(+43 files in other folders)
