[project]
name = "agentparty"
version = "0.1.0"
description = "MCP platform for multi-agent LLM workflows"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "mcp>=0.9.0",
    "redis>=5.0.0",
    "qdrant-client>=1.7.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
    "sse-starlette>=1.6.0",
    "aiosqlite>=0.19.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.scripts]
agentparty-index = "scripts.index_codebase:main"
agentparty-test = "scripts.test_workflow:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
